[package]
name = "cobra-rhi"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Cross platform RHI for vulkan and (WIP) directx. Supports fully bindless resources, RAII on resources, and automatic image transitions."

[dependencies]
anyhow = "1.0"
bitflags = "2.6.0"
glam = { version = "0.29.0", features = ["scalar-math", "bytemuck"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
cps = "0.2.3"
paste = "1.0.15"
slang_struct = "0.0.1"

ash = { version = "0.38.0", optional = true }
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs.git", optional = true }
spirv-cross2 = { version = "0.4.6", default-features = false, optional = true }

[features]
vulkan = ["dep:ash", "dep:vk-mem", "dep:spirv-cross2"]
directx = []

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"